Fix menu wrapping issues

--- a/_scss/header.scss
+++ b/_scss/header.scss
@@ -1,10 +1,14 @@
 /* --- Common header styles --- */
 header {
 	background-color: $header-background-color;
-	padding: 3rem 2em 15em;
-	margin-bottom: calc(-17em + 3rem);
+	padding: 3rem 2em 18em;
+	margin-bottom: calc(-20em + 3rem);
 	text-align: center;
 	font-size: 1em;
+	@media (max-width: 500px) {
+		padding: 3rem 2em 25em;
+		margin-bottom: calc(-27em + 3rem);
+	}
 	.sitename {
 		font-size: 3em;
 		vertical-align: middle;
