--- a/_scss/navbar.scss
+++ b/_scss/navbar.scss
@@ -6,6 +6,7 @@
 	margin: 0 auto 2rem;
 	padding: 0;
 	max-width: 36rem;
+	background-color: $header-background-color;
 	li {
 		display: inline-block;
 		text-transform: uppercase;
